・GOのライセンスファイルをリリースに含めるように修正 ・利用パッケージのライセンスリスト追加(Aboutページ) ・オンラインディストリビューションインストール機能追加 ・VHDパス表示
