# backend/http/schema/model_response_online_distribution.go
@@ -1,0 +1,23 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * WSLManager API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ */
+
+package schema
+
+type ResponseOnlineDistribution struct {
+
+  // ディストリビューション名
+  Name string `json:"name"`
+
+  // フレンドリー名
+  FriendlyName string `json:"friendlyName,omitempty"`
+
+  // 既にインストールされている場合は true
+  AlreadyInstalled bool `json:"alreadyInstalled,omitempty"`
+}
